--- a/paper.tex
+++ b/paper.tex
@@ -195,14 +195,15 @@ In \cite{Sus} Suslin showed for $n\geq 3$ that the elementary group $\E(n, R)$ c
 of the form $t(u,\,v)=1+uv^t$ where $u\in\Um(n,\,R)$, $v\in R^n$ and $u^tv=0$. Here $u^t$ stands for the transpose of $u$.
 This result clearly implies that $\E(n,\,R)$ is normal inside $\GL(n,\,R)$.
 Afterwards, W.~van~der~Kallen developed Suslin's ideas and showed for $n\geq4$ that the Steinberg group $\St(n,\,R)$ is isomorphic to the group presented by generators
-$$\{X(u,\,v)\mid u\in\Um(n,\,R),\ v\in R^n,\ u^tv=0\}$$ and the following list of relations (see~\cite{vdK}):
+$$\{X(u,\,v)\mid u\in\Um(n,\,R),\ v\in R^n,\ u^tv=0\}$$ and the following list of relations (see~\cite[Theorem~1]{vdK}):
 \setcounter{equation}{0} \renewcommand{\theequation}{K\arabic{equation}}
 \begin{align}
 &X(u,\,v)X(u,\,w)=X(u,\,v+w), \label{add1} \\
 &X(u,\,v)X(u',\,v')X(u,\,v)\inv=X(t(u,\,v)u',\,t(v,\,u)\inv v'). \label{conj1}
 \end{align}
 This presentation clearly implies that $\phi\colon\St(n,\,R)\rightarrow\E(n,\,R)$ is a central extension.
-Notice that our notation for the generators slightly differs from that of~\cite{vdK}, e.\,g. our elements $X(u, v)$ correspond to van der Kallen's $(u, v^t)$.
+Notice that our notation for the generators of $\St(n, R)$ slightly differs from that of~\cite{vdK}, e.\,g. we parametrize elements $X(u, v)$ with two columns
+rather than with one column and one row. Our generator $X(u,v)$ corresponds to van der Kallen's generator $(u, v^t)$.
 
 Recall that an ideal $I\trianglelefteq R$ is called a \emph{splitting ideal} if the canonical projection $R \twoheadrightarrow R/I$ splits as a unital ring morphism.
 For a splitting ideal $I\trianglelefteq R$ the \emph{relative Steinberg group} $\St(n,\,R,\,I) = \St(\rA_{n-1}, R, I)$ can be defined as the kernel $\Ker\big(\St(n,\,R)\epi\St(n,\,R/I)\big)$.
@@ -312,65 +313,58 @@ F(u,\,v)S(u',\,v')F(u,\,v)\inv=F(u,\,v)\prod F(Ne_k,\,N^*e_1\tilde u_k)F(u,\,v)\
 Finally, $(\mathrm{iv})$ follows from $(\mathrm{iii})$.
 \end{proof}
 
-Next, we show that for a splitting ideal $I\trianglelefteq R$ the group $\St^*(n,\,R,\,I)$ is isomorphic to $\St(n,\,R,\,I)=\Ker\big(\St(n,\,R)\epi\St(n,\,R/I)\big)$. With this end we construct two inverse homomorphisms
-$$
-\xymatrix{
-\St^*(n,\,R,\,I)\ar@<0.5ex>[r]^{\iota}&\St(n,\,R,\,I)\ar@<0.5ex>[l]^{\kappa}.
-}
-$$
+Our next goal is to show for a splitting ideal $I\trianglelefteq R$ that the group $\St^*(n,\,R,\,I)$ is isomorphic to $\St(n,\,R,\,I)=\Ker\big(\St(n,\,R)\epi\St(n,\,R/I)\big)$.
+With this end we construct two mutually inverse homomorphisms
+$$\xymatrix{\St^*(n,\,R,\,I)\ar@<0.5ex>[r]^{\iota}&\St(n,\,R,\,I)\ar@<0.5ex>[l]^{\kappa}.}$$
 
-Firstly, we define $\iota$ as a homomorhism to an absolute group
-$$
-\xymatrix{
-\St^*(n,\,R,\,I)\ar@<0.0ex>[r]^{\iota}&\St(n,\,R).
-}
-$$
-We do not need an assumption that $I$ is a splitting ideal for that.
+Firstly, we define $\iota$ as a homomorphism to the absolute group (for which we de not need the assumption that $I$ is splitting).
+$$\xymatrix{\St^*(n,\,R,\,I)\ar@<0.0ex>[r]^{\iota}&\St(n,\,R).}$$
 
-Clearly, we map elements $F(u,\,v)$ to van der Kallen's another generators $X(u,\,v)$. To find images for $S(u,\,v)$ as well we recall that van der Kallen in~\cite[3.8--3.10]{vdK} defines also elements
-$$
-x(u,\,v)\in\St(n,\,R),\ u^tv=0,\ u_i=0\,\text{ or }\,v_i=0\,\text{ for some }\,1\leq i\leq n.
-$$
-Now, ``transpose'' the definition~\cite[3.13]{vdK}.
+Clearly, we must map the elements $F(u,\,v)$ to van der Kallen's generators $X(u,\,v)$.
+Now we should find the images for the elements $S(u,\,v)$ as well.
+First of all, recall that van der Kallen in~\cite[3.8--3.10]{vdK} constructs the following elements
+$$x(u,\,v)\in\St(n,\,R),\ u^tv=0,\ u_i=0\,\text{ or }\,v_i=0\,\text{ for some }\,1\leq i\leq n.$$
+The following definition is the ``transpose'' of \cite[3.13]{vdK}.
+\begin{df} For $u\in R^n$, $v\in\E(n,\,R)e_1$, $u^tv=0$, consider the set $\overline Y(u,\,v)\subseteq\St(n,\,R)$
+ consisiting of all elements $y\in\St(n,\,R)$ that admit the decomposition $y=\prod x(w^k,\,v)$, 
+ where $\sum u^k=u$ and $u^k=c^k \cdot (e_pv_q-e_qv_p)$ for some $c^k\in R$, $1\leq p\neq q\leq n$. \end{df}
 
-\begin{df}
-For $u\in R^n$, $v\in\E(n,\,R)e_1$, $u^tv=0$, consider the set $\overline Y(u,\,v)\subseteq\St(n,\,R)$ consisiting of all elements $y\in\St(n,\,R)$ which could be decomposed as a product $\prod x(w^k,\,v)$, where $\sum w^k=u$ and $w^k=(e_pv_q-e_qv_p)c^k$ for some $c^k\in R$, $1\leq p\neq q\leq n$.
-\end{df}
+Since columns of elementary matrices are unimodular, one can find $w\in R^t$ such that $w^tv=1$.
+It is not hard to check that $u = (w^t\cdot v)\cdot u = \sum_{p<q}u_{pq}$, where $u_{pq} = (u_pw_q - u_qw_p) \cdot (v_qe_p - v_pe_q)\in{}\!R^n$,
+therefore $\overline Y(u,\,v)$ is not empty (cf.~\cite[3.1--3.2]{vdK}).
+Obviously, for $x\in\overline Y(u,\,v)$ and $y\in\overline Y(w,\,v)$ one has $xy\in\overline Y(u+w,\,v)$.
 
-Since coloumns of elementary matrices are unimodular, $\overline Y(u,\,v)$ is not empty (see~\cite[3.1--3.2]{vdK}). Obviously, for $x\in\overline Y(u,\,v)$ and $y\in\overline Y(w,\,v)$ holds $xy\in\overline Y(u+w,\,v)$.
+Repeating~\cite[3.14--3.15]{vdK} verbatim one shows the following.
+\begin{lm} For $g\in\St(n,\,R)$ one has
+\begin{enumerate} \item $g\overline Y(u,\,v)g\inv\subseteq\overline Y(\phi(g)u,\,\phi(g)^*v)$;
+                  \item $\overline Y(u,\,v)$ consists of exactly one element. \end{enumerate} \end{lm}
 
-Repeating~\cite[3.14--3.15]{vdK} verbatim one shows that
-
-\begin{lm}
-for $g\in\St(n,\,R)$ holds
-\begin{enumerate}
-\item
-$g\overline Y(u,\,v)g\inv\subseteq\overline Y(\phi(g)u,\,\phi(g)^*v)$;
-\item
-$\overline Y(u,\,v)$ consists of exactly one element.
-\end{enumerate}
-\end{lm}
-
-The only element of $\overline Y(u,\,v)$ we denote by $Y(u,\,v)$. We map elements $S(u,\,v)\in\St^*(n,\,R,\,I)$ to $Y(u,\,v)$. To show that such a homomorphism is well-defined we check that $X(u,\,v)$ and $Y(u,\,v)$ satisfy relations R1--R4, but R1--R3 are already checked.
-
-\begin{lm}
-Consider $(u,\,v^t)=(Me_1,\,e_2^tM\inv)$, $M\in\E(n,\,R)$, $a\in I$. Then $X(u,\,va)=Y(ua,\,v)$.
-\end{lm}
-
+We denote the only element of $\overline Y(u,\,v)$ by $Y(u,\,v)$. 
+Now we can define $\iota$ by sending $S(u,\,v)\in\St^*(n,\,R,\,I)$ to $Y(u,\,v)$. 
+To show that the map $\iota$ is well-defined we should check that the elements $X(u,\,v)$ and $Y(u,\,v)$ satisfy the relations 
+\eqref{add4}--\eqref{coinc} (with $F$'s and $S$'s replaced with $X$'s and $Y$'s).
+Notice that the validity of relations \eqref{add4}--\eqref{conj3} has already been checked.
+\begin{lm} For $(u,\,v^t)=(Me_1,\,e_2^tM\inv)$, $M\in\E(n,\,R)$, $a\in I$ one has $X(u,\,va)=Y(ua,\,v)$. \end{lm}
 \begin{proof}
-It suffices to show that $X(e_1,\,e_2a)=Y(e_1a,\,e_2)$. Compute the commutator $[Y(-e_3,\,e_2),\,X(e_1,\,e_3a)]$ in two ways:
-$$
-Y(-e_3,\,e_2)X(e_1,\,e_3a)Y(-e_3,\,e_2)\inv\cdot X(e_1,\,-e_3a)=X(e_1,\,e_2a),
-$$
-and
-$$
-Y(-e_3,\,e_2)\cdot\,X(e_1,\,e_3a)Y(e_3,\,e_2)X(e_1,\,e_3a)\inv=Y(e_1a,\,e_2).
-$$
+In view of the above lemma we only need to show that $X(e_1,\,e_2a)=Y(e_1a,\,e_2)$.
+This equality can be obtained by computing the commutator $[Y(-e_3,\,e_2),\,X(e_1,\,e_3a)]$ in two ways:
+$$ Y(-e_3,\,e_2)X(e_1,\,e_3a)Y(-e_3,\,e_2)\inv\cdot X(e_1,\,-e_3a)=X(e_1,\,e_2a), \text{ and} $$
+$$ Y(-e_3,\,e_2)\cdot\,X(e_1,\,e_3a)Y(e_3,\,e_2)X(e_1,\,e_3a)\inv=Y(e_1a,\,e_2). \qedhere $$
 \end{proof}
 
-Therefore, the homomorphism $\iota\colon\St^*(n,\,R,\,I)\rightarrow\St(n,\,R)$ sending $F(u,\,v)$ to $X(u,\,v)$ and $S(u,\,v)$ to $Y(u,\,v)$ is well-defined. Denote $\rho_I\colon R\epi R/I$, then one can easily see that induced morphism on Steinberg groups 
-$$\rho_I^*\colon\St(n,\,R)\rightarrow\St(n,\,R/I)$$
- sends $X(u,\,v)$ to $X(\rho_I(u),\,\rho_I(v))$ and $Y(u,\,v)$ to $Y(\rho_I(u),\,\rho_I(v))$. Observe that $\E(n,\,R)\epi\E(n,\,R/I)$ is surjective so that for $x\in\E(n,\,R)e_1$ holds that $\rho_I(x)\in\E(n,\,R/I)e_1$. It follows from additivity relations that $X(u,\,0)=1=Y(0,\,v)$, thus $\mathrm{Im}(\iota)\subseteq\Ker(\rho_I^*)=\St(n,\,R,\,I)$.
+We can sum up the above discussion into the following result.
+\begin{lm} \label{lm:map-iota}
+ For a splitting ideal $I\trianglelefteq R$ there exists a well-defined homomorphism 
+ $$\iota\colon\St^*(n,\,R,\,I)\rightarrow\St(n,\,R, I) \subseteq \St(n, R)$$ 
+ satisfying the equalities $\iota (F(u,\,v)) = X(u,\,v)$ and $\iota (S(u,\,v)) = Y(u,\,v)$. \end{lm}
+\begin{proof}
+We already know that $\iota$ is well-defined. It suffices to check that the image of $\iota$ is contained in $\St(n,\,R,I)$.
+Denote the canonical projection $R\epi R/I$ by $\rho$.
+Clearly, the induced group morphism $\rho^*\colon\St(n,\,R)\rightarrow\St(n,\,R/I)$ sends $X(u,\,v)$ to $X(\rho(u),\,\rho(v))$ and $Y(u,\,v)$ to $Y(\rho(u),\,\rho(v))$. 
+Observe that $\E(n,\,R)\epi\E(n,\,R/I)$ is surjective, therefore for $x\in\E(n,\,R)e_1$ one has $\rho(x)\in\E(n,\,R/I)e_1$. 
+From the additivity relations we get that $X(u,\,0)=1=Y(0,\,v)$, hence $\mathrm{Im}(\iota)\subseteq\Ker(\rho^*)=\St(n,\,R,\,I)$, as required. \end{proof}
+
+ 
 
 We constructed $\iota$ for an arbitrary $I\trianglelefteq R$. For $I$ a splitting ideal we construct an inverse homomorphism
 $$
